# fso-abyss

./: .gitignore  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
data/: abyss.conf.sample
gsm0710/: gsm0710.c  gsm0710_p.h
src/: channel.vala  consts.vala  main.vala  multiplexer.vala  serial.vala  server.vala
vapi/: gsm0710.vapi  posixextra.vapi
